# atmacup16

./: .gitignore  Makefile  README.md  pyproject.toml
notebook/: eda001.ipynb  ens001.ipynb  ens002.ipynb  exp001.ipynb  exp002.ipynb  exp003.ipynb  exp004.ipynb  exp005.ipynb  exp006.ipynb  exp007.ipynb  exp008.ipynb  exp009.ipynb  exp010.ipynb  exp011.ipynb  exp012.ipynb  exp013.ipynb  exp014.ipynb  exp015.ipynb  exp016.ipynb  exp017.ipynb  exp018.ipynb  rule001.ipynb  rule002.ipynb  rule003.ipynb
