[tool.poetry]
name = "atmacup16"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
numpy = "^1.26.2"
faiss-cpu = "^1.7.4"
ipykernel = "^6.27.1"
ipywidgets = "^8.1.1"
nbqa = "^1.7.1"
fastparquet = "^2023.10.1"
pyarrow = "^14.0.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
polars = "^0.19.19"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
